--- a/react-protfolio/src/components/navbar/Navbar.module.css
+++ b/react-protfolio/src/components/navbar/Navbar.module.css
@@ -32,3 +32,44 @@
   color:var(--color-text);
   text-decoration:none;
 }
+@media screen and (max-width:880px){
+  .navbar
+   {
+    flex-direction: column;
+    align-items:flex-start;
+
+
+  }
+  .menu{
+    position: absolute;
+    right:0px;
+    margin-right: 10%;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 11px;
+    z-index:3;
+
+  }
+  .menuBtn{
+    display:block;
+    cursor:pointer;
+
+  }
+  .menuitems{
+   
+    flex-direction: column;
+    align-items:center;
+    gap:13px;
+    border-radius: 10px;
+    background: #225008
+    ;
+    background: linear-gradient(0deg,#15521a,#053113 );
+    padding: 24px 33px;
+    box-shadow:0 0 4px rbga(0,0,0,0.25);
+  }
+  .menuOpen{
+    display: flex;
+    z-index: 1;
+  }
+
+}
