--- a/react-protfolio/src/components/navbar/profile/profile.module.css
+++ b/react-protfolio/src/components/navbar/profile/profile.module.css
@@ -28,5 +28,5 @@
   font-family: var(--font-roboto);
   background: linear-gradient(90deg, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 0) 120%);
   -webkit-text-fill-color: transparent;
-  -webkit-background-clip: te;
+  -webkit-background-clip: text;
 }
