--- a/react-protfolio/src/components/navbar/profile/profile.module.css
+++ b/react-protfolio/src/components/navbar/profile/profile.module.css
@@ -30,3 +30,81 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
+.description{
+  font-size: 38px;
+  font-family: var(--font-roboto);
+  margin-bottom:52px;
+}
+.contact{
+  text-decoration: none;
+  background-color: var(--color-primary);
+  color:var(--color-text);
+  border-radius:100px;
+  font-size: 38px;
+  font-weight: 600;
+  padding:17px 26px;
+  box-shadow: 0 0 4px 0 rbga(0,0,0,0.25);
+
+
+
+}
+.profileimg{
+  width:50%;
+  z-index:1;
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+
+}
+@keyframes floating{
+  0%{
+    transform:translate(0,0px);
+  }
+  50%{
+    transform:translate(0,10px);
+
+  }
+  100%{
+    transform:translate(0,-10px);
+  }
+}
+
+.topblur{
+  position:absolute;
+  width:50vw;
+  height:50vw;
+  min-width:350px;
+  min-width: 350px;
+  top:-128px;
+  left:-10vw;
+  border-radius:764px;
+  background: #073a07;
+  filter: blur(100px);
+  z-index: 0;
+}
+
+.bottomblur{
+  position:absolute;
+  width:50vw;
+  height:50vw;
+  min-width:350px;
+  min-width: 250px;
+  top:247px;
+  right:-25vw;
+  border-radius:764px;
+  background: #053005;
+  filter: blur(100px);
+  z-index: 0;
+
+}
+@media screen and (max-width:830px){
+  .container{
+    flex-direction: column-reverse;
+  }
+
+  .content{
+    align-items: center;
+  }
+}
+
