--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -13,12 +13,14 @@
 }
 
 .text h2 {
+
   font-size: 80px;
   font-weight: 700;
   letter-spacing: 4px;
 }
 
 .text p {
+  background-color: var(--color-secondary);
   font-size: 40px;
   font-weight: 400;
   letter-spacing: 2px;
