--- a/src/components/contact/contact.module.css
+++ b/src/components/contact/contact.module.css
@@ -58,9 +58,17 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+   
+  }
+  .text p{
+    font-size: 24px;
   }
 
   .links {
     align-items: center;
+    
+  }
+  .links a{
+    font-size: 19px;
   }
 }
