--- a/src/components/projects/Projects.module.css
+++ b/src/components/projects/Projects.module.css
@@ -19,6 +19,7 @@ h1{
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 5px;
+  background-color: var(--color-secondary);
 }
 
 .projectTitle {
